# cern_calibration

./: .gitignore  CMakeLists.txt  Efficiency.ipynb  efficiency.cpp  main.cpp  ref.txt  refEu.txt  refcreator.ipynb  refs.txt  refsEu.txt  refsGa.txt
ECalData/: calibration.txt  calibrations.root
EfficiencyCalData/: individualEu.txt  individualFits091.root  individualHistograms091.root
conf/: config_root_online  config_root_online2  config_root_online_addback  config_root_online_old  config_root_online_pn_together  config_stat
